Create main styling
Main hub for styling imports

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "sass": "^1.22.9",
     "style-dictionary": "2.8.1"
   }
 }
